# dickfather_bot

./: Cargo.toml  README.md  users.json
src/: commander.rs  config.rs  lib.rs  loader.rs  main.rs
src/models/: mod.rs  training.rs  user_data.rs
