[package]
name = "dickfather_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
rusqlite = "0.32.1"
warp = "0.3.7"
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "dickfather_bot"
path = "src/main.rs"


[env]
RUST_LOG = "debug, info, error"
